--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,47 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-   >
+    android:layout_height="match_parent">
       <androidx.cardview.widget.CardView
           android:layout_width="300dp"
-          android:layout_height="200dp"
+          android:layout_height="350dp"
           android:layout_centerInParent="true"
+          app:cardCornerRadius="4dp"
+          android:elevation="6dp"
           >
           <RelativeLayout
               android:id="@+id/relativeLayout1"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
+              android:layout_height="match_parent"
               >
               <RelativeLayout
                   android:layout_centerInParent="true"
+                  android:layout_centerHorizontal="true"
                   android:id="@+id/relativeLayout2"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
 
                   <EditText
+                      android:drawableLeft="@drawable/ic_email"
                       android:id="@+id/ed_login_Email"
-                      android:layout_width="180dp"
+                      android:layout_width="200dp"
                       android:layout_height="wrap_content"
                       android:layout_centerHorizontal="true"
-                      android:background="@null"
+                      android:background="@drawable/edit_text_background"
+                      android:padding="10dp"
                       android:layout_marginTop="15dp"
-                      android:drawablePadding="20dp"
+                      android:drawablePadding="12dp"
                       android:hint="Enter your Email"
                       android:inputType="textEmailAddress"
                       android:textSize="15dp"
                       />
 
                   <EditText
+                      android:drawableLeft="@drawable/ic_lock"
                       android:layout_below="@id/ed_login_Email"
                       android:id="@+id/ed_login_Password"
-                      android:layout_width="180dp"
+                      android:layout_width="200dp"
                       android:layout_height="wrap_content"
                       android:layout_centerHorizontal="true"
                       android:layout_marginTop="15dp"
-                      android:background="@null"
-                      android:drawablePadding="20dp"
+                      android:background="@drawable/edit_text_background"
+                      android:padding="10dp"
+                      android:drawablePadding="12dp"
                       android:hint="@string/ed_password"
                       android:inputType="textPassword"
                       android:textSize="15dp"
@@ -54,9 +61,10 @@
                       android:layout_centerHorizontal="true"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
+                      android:textColor="@color/colorWhite"
                       android:text="Login"
                       android:textSize="15dp"
-
+                      android:background="@drawable/button_background"
 
                       />
 
